test/caffeine_lang/corpus/frontend/parser/errors/missing_provides.caffeine
Blueprints for "SLO"
  * "test":
    Requires { env: String }
